// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Announcement CardText renders correctly for announcement 1`] = `
<p
  class="wds-notification-card__text"
>
  some snippet
</p>
`;

exports[`Article Comments CardText renders correctly for article comment reply (for followed comment) 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-article-comment-reply-followed-comment{"user":"ATO&lt;b&gt;B&lt;/b&gt;","articleTitle":"
  <b>
    Article &lt;b&gt;Title&lt;/b&gt;
  </b>
  "}
</p>
`;

exports[`Article Comments CardText renders correctly for article comment reply 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-article-comment-reply-own-comment{"user":"ATO&lt;b&gt;B&lt;/b&gt;","articleTitle":"
  <b>
    Article &lt;b&gt;Title&lt;/b&gt;
  </b>
  "}
</p>
`;

exports[`Article Comments at mentions CardText renders correctly for anon user 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-article-comment-reply-mention{"user":"notifications-anon-user","articleTitle":"
  <b>
    Article &lt;b&gt;Title&lt;/b&gt;
  </b>
  "}
</p>
`;

exports[`Article Comments at mentions CardText renders correctly for article comment at mention 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-article-comment-comment-mention{"user":"ATO&lt;b&gt;B&lt;/b&gt;","articleTitle":"
  <b>
    Article &lt;b&gt;Title&lt;/b&gt;
  </b>
  "}
</p>
`;

exports[`Article Comments at mentions CardText renders correctly for article comment reply at mention 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-article-comment-reply-mention{"user":"ATO&lt;b&gt;B&lt;/b&gt;","articleTitle":"
  <b>
    Article &lt;b&gt;Title&lt;/b&gt;
  </b>
  "}
</p>
`;

exports[`CardText renders correctly with default props 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-replied-by-multiple-users-with-title{"postTitle":"
  <b>
    MOAR &lt;b&gt;LIKES&lt;/b&gt;
  </b>
  ","mostRecentUser":"ATO&lt;b&gt;B&lt;/b&gt;","number":2}
</p>
`;

exports[`CardText renders correctly with unknown type 1`] = `
<p
  class="wds-notification-card__text"
/>
`;

exports[`Discussion at mentions CardText renders correctly for post at mention 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-reply-at-mention{"postTitle":"
  <b>
    Post with at &lt;b&gt;mention&lt;/b&gt;
  </b>
  ","mentioner":"ATO&lt;b&gt;B&lt;/b&gt;"}
</p>
`;

exports[`Discussion at mentions CardText renders correctly for thread at mention 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-post-at-mention{"postTitle":"
  <b>
    Post with at &lt;b&gt;mention&lt;/b&gt;
  </b>
  ","mentioner":"ATO&lt;b&gt;B&lt;/b&gt;"}
</p>
`;

exports[`Discussion post upvote CardText renders correctly for discussion post upvote with no title and one actor 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-post-upvote-single-user-no-title
</p>
`;

exports[`Discussion post upvote CardText renders correctly for discussion post upvote with no title and three actors 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-post-upvote-multiple-users-no-title{"number":3}
</p>
`;

exports[`Discussion post upvote CardText renders correctly for discussion post upvote with title and one actor 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-post-upvote-single-user-with-title{"postTitle":"
  <b>
    MOAR &lt;b&gt;LIKES&lt;/b&gt;
  </b>
  "}
</p>
`;

exports[`Discussion post upvote CardText renders correctly for discussion post upvote with title and three actors 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-post-upvote-multiple-users-with-title{"postTitle":"
  <b>
    MOAR &lt;b&gt;LIKES&lt;/b&gt;
  </b>
  ","number":3}
</p>
`;

exports[`Discussion reply CardText renders correctly for discussion reply with no title and one actor 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-replied-by-no-title{"user":"ATO&lt;b&gt;B&lt;/b&gt;"}
</p>
`;

exports[`Discussion reply CardText renders correctly for discussion reply with no title and three actors 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-replied-by-multiple-users-no-title{"mostRecentUser":"ATO&lt;b&gt;B&lt;/b&gt;","number":2}
</p>
`;

exports[`Discussion reply CardText renders correctly for discussion reply with no title and two actors 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-replied-by-two-users-no-title{"firstUser":"ATO&lt;b&gt;B&lt;/b&gt;","secondUser":"BTOA"}
</p>
`;

exports[`Discussion reply CardText renders correctly for discussion reply with title and one actor 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-replied-by-with-title{"user":"ATO&lt;b&gt;B&lt;/b&gt;","postTitle":"
  <b>
    MOAR &lt;b&gt;LIKES&lt;/b&gt;
  </b>
  "}
</p>
`;

exports[`Discussion reply CardText renders correctly for discussion reply with title and three actors 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-replied-by-multiple-users-with-title{"postTitle":"
  <b>
    MOAR &lt;b&gt;LIKES&lt;/b&gt;
  </b>
  ","mostRecentUser":"ATO&lt;b&gt;B&lt;/b&gt;","number":2}
</p>
`;

exports[`Discussion reply CardText renders correctly for discussion reply with title and two actors 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-replied-by-two-users-with-title{"firstUser":"ATO&lt;b&gt;B&lt;/b&gt;","secondUser":"BTOA","postTitle":"
  <b>
    MOAR &lt;b&gt;LIKES&lt;/b&gt;
  </b>
  "}
</p>
`;

exports[`Discussion reply upvote CardText renders correctly for discussion reply upvote with no title and one actor 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-reply-upvote-single-user-no-title
</p>
`;

exports[`Discussion reply upvote CardText renders correctly for discussion reply upvote with no title and three actors 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-reply-upvote-multiple-users-no-title{"number":3}
</p>
`;

exports[`Discussion reply upvote CardText renders correctly for discussion reply upvote with title and one actor 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-reply-upvote-single-user-with-title{"postTitle":"
  <b>
    MOAR &lt;b&gt;LIKES&lt;/b&gt;
  </b>
  "}
</p>
`;

exports[`Discussion reply upvote CardText renders correctly for discussion reply upvote with title and three actors 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-reply-upvote-multiple-users-with-title{"postTitle":"
  <b>
    MOAR &lt;b&gt;LIKES&lt;/b&gt;
  </b>
  ","number":2}
</p>
`;

exports[`Talk page CardText renders correctly 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-talk-page-message{"user":"Test"}
</p>
`;

exports[`Wall post CardText renders correctly for multiple replies on others wall 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-wall-reply-multiple-users{"postTitle":"
  <b>
    Article &lt;b&gt;Title&lt;/b&gt;
  </b>
  ","wallOwner":"TestOther","number":"2","firstUser":"Test","secondUser":"TestOther"}
</p>
`;

exports[`Wall post CardText renders correctly for multiple replies on own wall 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-own-wall-reply-multiple-users{"postTitle":"
  <b>
    Article &lt;b&gt;Title&lt;/b&gt;
  </b>
  ","wallOwner":"Test","number":"2","user":"notifications-anon-user"}
</p>
`;

exports[`Wall post CardText renders correctly for reply to own message when multiple actors 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-wall-reply-multiple-users-own-message{"postTitle":"
  <b>
    Article &lt;b&gt;Title&lt;/b&gt;
  </b>
  ","wallOwner":"TestOther","number":"2","firstUser":"Test"}
</p>
`;

exports[`Wall post CardText renders correctly for single reply on others wall 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-wall-reply{"postTitle":"
  <b>
    Article &lt;b&gt;Title&lt;/b&gt;
  </b>
  ","wallOwner":"TestOther","firstUser":"Test","secondUser":"TestOther"}
</p>
`;

exports[`Wall post CardText renders correctly for single reply on own wall 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-own-wall-reply{"postTitle":"
  <b>
    Article &lt;b&gt;Title&lt;/b&gt;
  </b>
  ","wallOwner":"Test","user":"Test"}
</p>
`;

exports[`Wall post CardText renders correctly for single reply to own message 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-wall-reply-own-message{"postTitle":"
  <b>
    Article &lt;b&gt;Title&lt;/b&gt;
  </b>
  ","wallOwner":"TestOther","user":"Test"}
</p>
`;

exports[`Wall post CardText renders correctly when metadata is missing 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-own-wall-reply{"postTitle":"
  <b>
    Article &lt;b&gt;Title&lt;/b&gt;
  </b>
  ","wallOwner":"Test","user":"notifications-anon-user"}
</p>
`;

exports[`Wall post CardText renders correctly when wall URL is invalid 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-wall-reply{"postTitle":"
  <b>
    Article &lt;b&gt;Title&lt;/b&gt;
  </b>
  ","wallOwner":null,"firstUser":"notifications-anon-user","secondUser":"Test"}
</p>
`;

exports[`Wall thread CardText renders correctly for others wall 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-wall-post{"firstUser":"Test2","postTitle":"
  <b>
    Article &lt;b&gt;Title&lt;/b&gt;
  </b>
  ","wallOwner":"Test2"}
</p>
`;

exports[`Wall thread CardText renders correctly for own wall 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-own-wall-post{"user":"Test","postTitle":"
  <b>
    Article &lt;b&gt;Title&lt;/b&gt;
  </b>
  ","wallOwner":"Test"}
</p>
`;

exports[`Wall thread CardText renders correctly when metadata is missing 1`] = `
<p
  class="wds-notification-card__text"
>
  notifications-own-wall-post{"user":"notifications-anon-user","postTitle":"
  <b>
    Article &lt;b&gt;Title&lt;/b&gt;
  </b>
  ","wallOwner":"Test"}
</p>
`;
